parser/nup_parser.go
// Code generated from parser/NupParser.g4 by ANTLR 4.9. DO NOT EDIT.

package parser // NupParser

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var literalNames = []string{
	"", "'\\'", "", "", "", "", "", "", "'}'", "','", "'\"'", "'['", "']'",
	"'='", "", "'{'",
}
var symbolicNames = []string{
	"", "BACKSLASH", "NL", "DOLLARS", "DOLLAR", "GRAVE", "GRAVES", "TEXT",
	"CLOSE_BRACE", "COMMA", "QUOTE", "OPEN_BRACKET", "CLOSE_BRACKET", "EQUALS",
	"SPACE", "OPEN_BRACE", "STR", "NUMBER", "BOOLEAN", "ALPHANUMERIC", "SNL",
	"MDOLLARS", "MDOLLAR", "MTEXT", "CNL", "CGRAVE", "CGRAVES", "CTEXT", "LANGUAGE",
}

var ruleNames = []string{
	"newLine", "blankLines", "document", "block", "content", "text", "identifier",
	"command", "val", "attr", "attrs",
}

type NupParser struct {
	*antlr.BaseParser
}

// NewNupParser produces a new parser instance for the optional input antlr.TokenStream.
//
// The *NupParser instance produced may be reused by calling the SetInputStream method.
// The initial parser configuration is expensive to construct, and the object is not thread-safe;
// however, if used within a Golang sync.Pool, the construction cost amortizes well and the
// objects can be used in a thread-safe manner.
func NewNupParser(input antlr.TokenStream) *NupParser {
	this := new(NupParser)
	deserializer := antlr.NewATNDeserializer(nil)
	deserializedATN := deserializer.DeserializeFromUInt16(parserATN)
	decisionToDFA := make([]*antlr.DFA, len(deserializedATN.DecisionToState))
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "NupParser.g4"

	return this
}

// NupParser tokens.
const (
	NupParserEOF           = antlr.TokenEOF
	NupParserBACKSLASH     = 1
	NupParserNL            = 2
	NupParserDOLLARS       = 3
	NupParserDOLLAR        = 4
	NupParserGRAVE         = 5
	NupParserGRAVES        = 6
	NupParserTEXT          = 7
	NupParserCLOSE_BRACE   = 8
	NupParserCOMMA         = 9
	NupParserQUOTE         = 10
	NupParserOPEN_BRACKET  = 11
	NupParserCLOSE_BRACKET = 12
	NupParserEQUALS        = 13
	NupParserSPACE         = 14
	NupParserOPEN_BRACE    = 15
	NupParserSTR           = 16
	NupParserNUMBER        = 17
	NupParserBOOLEAN       = 18
	NupParserALPHANUMERIC  = 19
	NupParserSNL           = 20
	NupParserMDOLLARS      = 21
	NupParserMDOLLAR       = 22
	NupParserMTEXT         = 23
	NupParserCNL           = 24
	NupParserCGRAVE        = 25
	NupParserCGRAVES       = 26
	NupParserCTEXT         = 27
	NupParserLANGUAGE      = 28
)

// NupParser rules.
const (
	NupParserRULE_newLine    = 0
	NupParserRULE_blankLines = 1
	NupParserRULE_document   = 2
	NupParserRULE_block      = 3
	NupParserRULE_content    = 4
	NupParserRULE_text       = 5
	NupParserRULE_identifier = 6
	NupParserRULE_command    = 7
	NupParserRULE_val        = 8
	NupParserRULE_attr       = 9
	NupParserRULE_attrs      = 10
)

// INewLineContext is an interface to support dynamic dispatch.
type INewLineContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsNewLineContext differentiates from other interfaces.
	IsNewLineContext()
}

type NewLineContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyNewLineContext() *NewLineContext {
	var p = new(NewLineContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = NupParserRULE_newLine
	return p
}

func (*NewLineContext) IsNewLineContext() {}

func NewNewLineContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *NewLineContext {
	var p = new(NewLineContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = NupParserRULE_newLine

	return p
}

func (s *NewLineContext) GetParser() antlr.Parser { return s.parser }

func (s *NewLineContext) NL() antlr.TerminalNode {
	return s.GetToken(NupParserNL, 0)
}

func (s *NewLineContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *NewLineContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *NewLineContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(NupParserListener); ok {
		listenerT.EnterNewLine(s)
	}
}

func (s *NewLineContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(NupParserListener); ok {
		listenerT.ExitNewLine(s)
	}
}

func (p *NupParser) NewLine() (localctx INewLineContext) {
	localctx = NewNewLineContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, NupParserRULE_newLine)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(22)
		p.Match(NupParserNL)
	}

	return localctx
}

// IBlankLinesContext is an interface to support dynamic dispatch.
type IBlankLinesContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsBlankLinesContext differentiates from other interfaces.
	IsBlankLinesContext()
}

type BlankLinesContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBlankLinesContext() *BlankLinesContext {
	var p = new(BlankLinesContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = NupParserRULE_blankLines
	return p
}

func (*BlankLinesContext) IsBlankLinesContext() {}

func NewBlankLinesContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *BlankLinesContext {
	var p = new(BlankLinesContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = NupParserRULE_blankLines

	return p
}

func (s *BlankLinesContext) GetParser() antlr.Parser { return s.parser }

func (s *BlankLinesContext) AllNewLine() []INewLineContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*INewLineContext)(nil)).Elem())
	var tst = make([]INewLineContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(INewLineContext)
		}
	}

	return tst
}

func (s *BlankLinesContext) NewLine(i int) INewLineContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*INewLineContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(INewLineContext)
}

func (s *BlankLinesContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BlankLinesContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *BlankLinesContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(NupParserListener); ok {
		listenerT.EnterBlankLines(s)
	}
}

func (s *BlankLinesContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(NupParserListener); ok {
		listenerT.ExitBlankLines(s)
	}
}

func (p *NupParser) BlankLines() (localctx IBlankLinesContext) {
	localctx = NewBlankLinesContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, NupParserRULE_blankLines)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(24)
		p.NewLine()
	}
	p.SetState(26)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == NupParserNL {
		{
			p.SetState(25)
			p.NewLine()
		}

		p.SetState(28)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IDocumentContext is an interface to support dynamic dispatch.
type IDocumentContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDocumentContext differentiates from other interfaces.
	IsDocumentContext()
}

type DocumentContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDocumentContext() *DocumentContext {
	var p = new(DocumentContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = NupParserRULE_document
	return p
}

func (*DocumentContext) IsDocumentContext() {}

func NewDocumentContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DocumentContext {
	var p = new(DocumentContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = NupParserRULE_document

	return p
}

func (s *DocumentContext) GetParser() antlr.Parser { return s.parser }

func (s *DocumentContext) AllBlock() []IBlockContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IBlockContext)(nil)).Elem())
	var tst = make([]IBlockContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IBlockContext)
		}
	}

	return tst
}

func (s *DocumentContext) Block(i int) IBlockContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IBlockContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IBlockContext)
}

func (s *DocumentContext) AllNewLine() []INewLineContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*INewLineContext)(nil)).Elem())
	var tst = make([]INewLineContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(INewLineContext)
		}
	}

	return tst
}

func (s *DocumentContext) NewLine(i int) INewLineContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*INewLineContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(INewLineContext)
}

func (s *DocumentContext) AllBlankLines() []IBlankLinesContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IBlankLinesContext)(nil)).Elem())
	var tst = make([]IBlankLinesContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IBlankLinesContext)
		}
	}

	return tst
}

func (s *DocumentContext) BlankLines(i int) IBlankLinesContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IBlankLinesContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IBlankLinesContext)
}

func (s *DocumentContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DocumentContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DocumentContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(NupParserListener); ok {
		listenerT.EnterDocument(s)
	}
}

func (s *DocumentContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(NupParserListener); ok {
		listenerT.ExitDocument(s)
	}
}

func (p *NupParser) Document() (localctx IDocumentContext) {
	localctx = NewDocumentContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, NupParserRULE_document)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(33)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == NupParserNL {
		{
			p.SetState(30)
			p.NewLine()
		}

		p.SetState(35)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(36)
		p.Block()
	}
	p.SetState(42)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(37)
				p.BlankLines()
			}
			{
				p.SetState(38)
				p.Block()
			}

		}
		p.SetState(44)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext())
	}
	p.SetState(46)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == NupParserNL {
		{
			p.SetState(45)
			p.BlankLines()
		}

	}

	return localctx
}

// IBlockContext is an interface to support dynamic dispatch.
type IBlockContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsBlockContext differentiates from other interfaces.
	IsBlockContext()
}

type BlockContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBlockContext() *BlockContext {
	var p = new(BlockContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = NupParserRULE_block
	return p
}

func (*BlockContext) IsBlockContext() {}

func NewBlockContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *BlockContext {
	var p = new(BlockContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = NupParserRULE_block

	return p
}

func (s *BlockContext) GetParser() antlr.Parser { return s.parser }

func (s *BlockContext) AllContent() []IContentContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IContentContext)(nil)).Elem())
	var tst = make([]IContentContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IContentContext)
		}
	}

	return tst
}

func (s *BlockContext) Content(i int) IContentContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IContentContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IContentContext)
}

func (s *BlockContext) AllNewLine() []INewLineContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*INewLineContext)(nil)).Elem())
	var tst = make([]INewLineContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(INewLineContext)
		}
	}

	return tst
}

func (s *BlockContext) NewLine(i int) INewLineContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*INewLineContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(INewLineContext)
}

func (s *BlockContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BlockContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *BlockContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(NupParserListener); ok {
		listenerT.EnterBlock(s)
	}
}

func (s *BlockContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(NupParserListener); ok {
		listenerT.ExitBlock(s)
	}
}

func (p *NupParser) Block() (localctx IBlockContext) {
	localctx = NewBlockContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, NupParserRULE_block)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(55)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = (((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<NupParserBACKSLASH)|(1<<NupParserDOLLARS)|(1<<NupParserDOLLAR)|(1<<NupParserGRAVE)|(1<<NupParserGRAVES)|(1<<NupParserTEXT)|(1<<NupParserMTEXT)|(1<<NupParserCTEXT))) != 0) {
		{
			p.SetState(48)
			p.Content()
		}
		p.SetState(50)
		p.GetErrorHandler().Sync(p)

		if p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 4, p.GetParserRuleContext()) == 1 {
			{
				p.SetState(49)
				p.NewLine()
			}

		}
		p.SetState(53)
		p.GetErrorHandler().Sync(p)

		if p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 5, p.GetParserRuleContext()) == 1 {
			{
				p.SetState(52)
				p.Content()
			}

		}

		p.SetState(57)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IContentContext is an interface to support dynamic dispatch.
type IContentContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsContentContext differentiates from other interfaces.
	IsContentContext()
}

type ContentContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyContentContext() *ContentContext {
	var p = new(ContentContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = NupParserRULE_content
	return p
}

func (*ContentContext) IsContentContext() {}

func NewContentContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ContentContext {
	var p = new(ContentContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = NupParserRULE_content

	return p
}

func (s *ContentContext) GetParser() antlr.Parser { return s.parser }

func (s *ContentContext) Command() ICommandContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICommandContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ICommandContext)
}

func (s *ContentContext) Text() ITextContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITextContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITextContext)
}

func (s *ContentContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ContentContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ContentContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(NupParserListener); ok {
		listenerT.EnterContent(s)
	}
}

func (s *ContentContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(NupParserListener); ok {
		listenerT.ExitContent(s)
	}
}

func (p *NupParser) Content() (localctx IContentContext) {
	localctx = NewContentContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, NupParserRULE_content)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(61)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case NupParserBACKSLASH, NupParserDOLLARS, NupParserDOLLAR, NupParserGRAVE, NupParserGRAVES:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(59)
			p.Command()
		}

	case NupParserTEXT, NupParserMTEXT, NupParserCTEXT:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(60)
			p.Text()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// ITextContext is an interface to support dynamic dispatch.
type ITextContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsTextContext differentiates from other interfaces.
	IsTextContext()
}

type TextContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTextContext() *TextContext {
	var p = new(TextContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = NupParserRULE_text
	return p
}

func (*TextContext) IsTextContext() {}

func NewTextContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TextContext {
	var p = new(TextContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = NupParserRULE_text

	return p
}

func (s *TextContext) GetParser() antlr.Parser { return s.parser }

func (s *TextContext) TEXT() antlr.TerminalNode {
	return s.GetToken(NupParserTEXT, 0)
}

func (s *TextContext) MTEXT() antlr.TerminalNode {
	return s.GetToken(NupParserMTEXT, 0)
}

func (s *TextContext) CTEXT() antlr.TerminalNode {
	return s.GetToken(NupParserCTEXT, 0)
}

func (s *TextContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TextContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TextContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(NupParserListener); ok {
		listenerT.EnterText(s)
	}
}

func (s *TextContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(NupParserListener); ok {
		listenerT.ExitText(s)
	}
}

func (p *NupParser) Text() (localctx ITextContext) {
	localctx = NewTextContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, NupParserRULE_text)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(63)
		_la = p.GetTokenStream().LA(1)

		if !(((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<NupParserTEXT)|(1<<NupParserMTEXT)|(1<<NupParserCTEXT))) != 0) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

	return localctx
}

// IIdentifierContext is an interface to support dynamic dispatch.
type IIdentifierContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsIdentifierContext differentiates from other interfaces.
	IsIdentifierContext()
}

type IdentifierContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyIdentifierContext() *IdentifierContext {
	var p = new(IdentifierContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = NupParserRULE_identifier
	return p
}

func (*IdentifierContext) IsIdentifierContext() {}

func NewIdentifierContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *IdentifierContext {
	var p = new(IdentifierContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = NupParserRULE_identifier

	return p
}

func (s *IdentifierContext) GetParser() antlr.Parser { return s.parser }

func (s *IdentifierContext) AllALPHANUMERIC() []antlr.TerminalNode {
	return s.GetTokens(NupParserALPHANUMERIC)
}

func (s *IdentifierContext) ALPHANUMERIC(i int) antlr.TerminalNode {
	return s.GetToken(NupParserALPHANUMERIC, i)
}

func (s *IdentifierContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *IdentifierContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *IdentifierContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(NupParserListener); ok {
		listenerT.EnterIdentifier(s)
	}
}

func (s *IdentifierContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(NupParserListener); ok {
		listenerT.ExitIdentifier(s)
	}
}

func (p *NupParser) Identifier() (localctx IIdentifierContext) {
	localctx = NewIdentifierContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 12, NupParserRULE_identifier)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(66)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == NupParserALPHANUMERIC {
		{
			p.SetState(65)
			p.Match(NupParserALPHANUMERIC)
		}

		p.SetState(68)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// ICommandContext is an interface to support dynamic dispatch.
type ICommandContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetCmd returns the cmd token.
	GetCmd() antlr.Token

	// SetCmd sets the cmd token.
	SetCmd(antlr.Token)

	// GetAttributes returns the attributes rule contexts.
	GetAttributes() IAttrsContext

	// GetInner returns the inner rule contexts.
	GetInner() IBlockContext

	// SetAttributes sets the attributes rule contexts.
	SetAttributes(IAttrsContext)

	// SetInner sets the inner rule contexts.
	SetInner(IBlockContext)

	// IsCommandContext differentiates from other interfaces.
	IsCommandContext()
}

type CommandContext struct {
	*antlr.BaseParserRuleContext
	parser     antlr.Parser
	cmd        antlr.Token
	attributes IAttrsContext
	inner      IBlockContext
}

func NewEmptyCommandContext() *CommandContext {
	var p = new(CommandContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = NupParserRULE_command
	return p
}

func (*CommandContext) IsCommandContext() {}

func NewCommandContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CommandContext {
	var p = new(CommandContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = NupParserRULE_command

	return p
}

func (s *CommandContext) GetParser() antlr.Parser { return s.parser }

func (s *CommandContext) GetCmd() antlr.Token { return s.cmd }

func (s *CommandContext) SetCmd(v antlr.Token) { s.cmd = v }

func (s *CommandContext) GetAttributes() IAttrsContext { return s.attributes }

func (s *CommandContext) GetInner() IBlockContext { return s.inner }

func (s *CommandContext) SetAttributes(v IAttrsContext) { s.attributes = v }

func (s *CommandContext) SetInner(v IBlockContext) { s.inner = v }

func (s *CommandContext) Text() ITextContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITextContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITextContext)
}

func (s *CommandContext) MDOLLARS() antlr.TerminalNode {
	return s.GetToken(NupParserMDOLLARS, 0)
}

func (s *CommandContext) DOLLARS() antlr.TerminalNode {
	return s.GetToken(NupParserDOLLARS, 0)
}

func (s *CommandContext) MDOLLAR() antlr.TerminalNode {
	return s.GetToken(NupParserMDOLLAR, 0)
}

func (s *CommandContext) DOLLAR() antlr.TerminalNode {
	return s.GetToken(NupParserDOLLAR, 0)
}

func (s *CommandContext) CGRAVE() antlr.TerminalNode {
	return s.GetToken(NupParserCGRAVE, 0)
}

func (s *CommandContext) GRAVE() antlr.TerminalNode {
	return s.GetToken(NupParserGRAVE, 0)
}

func (s *CommandContext) SNL() antlr.TerminalNode {
	return s.GetToken(NupParserSNL, 0)
}

func (s *CommandContext) CGRAVES() antlr.TerminalNode {
	return s.GetToken(NupParserCGRAVES, 0)
}

func (s *CommandContext) GRAVES() antlr.TerminalNode {
	return s.GetToken(NupParserGRAVES, 0)
}

func (s *CommandContext) Attrs() IAttrsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAttrsContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IAttrsContext)
}

func (s *CommandContext) BACKSLASH() antlr.TerminalNode {
	return s.GetToken(NupParserBACKSLASH, 0)
}

func (s *CommandContext) OPEN_BRACE() antlr.TerminalNode {
	return s.GetToken(NupParserOPEN_BRACE, 0)
}

func (s *CommandContext) CLOSE_BRACE() antlr.TerminalNode {
	return s.GetToken(NupParserCLOSE_BRACE, 0)
}
